--- a/chapter2.tex
+++ b/chapter2.tex
@@ -301,7 +301,7 @@ We have :
 $$\medblackdiamond$$
 \newpage
 
-\section{p33-clarification 2.214}
+\section{p32-clarification 2.214}
 \begin{tcolorbox}
           $$ \pdv{a}{a_{mn}} = a a^{mn}$$
 \end{tcolorbox}
@@ -323,7 +323,6 @@ $$\medblackdiamond$$
 
 
 \section{p32-exercise}
-
 \begin{tcolorbox}
 Prove that $a_{mn}a^{mn} = N$.
 \end{tcolorbox}
@@ -333,6 +332,53 @@ From 2.204, we have
 \text{Consider} \quad a_{mR}a^{mR} &= 1\\
 \text{We can repeat (2) for R = 1,2,...,N} \quad \Rightarrow a_{mr}a^{mr} &= N\\
 \end{align}
+$$\medblackdiamond$$
+\newpage
+
+
+\section{p33-exercise}
+\begin{tcolorbox}
+Show that in Euclidean 3-space with rectangular Cartesian coordinates, the definition 2.301 coincides with the usual definition of the magnitude of a vector.
+\end{tcolorbox}
+The length of an arbitrary vector in Euclidean 3-space with rectangular Cartesian coordinates, is
+\begin{align}
+\ ds^2 = (dy^1)^2 + (dy^2)^2 (dy^2)^2
+\end {align}
+From 2.301, it is obvious that the metrixc tensor can be expressed as,
+\begin{align}
+\begin{pmatrix}1 & 0 &0 \\ 0 & 1 &0\\0 & 0 &1  \\ \end{pmatrix} 
+\end{align}
+$$\medblackdiamond$$
+\newpage
+
+
+\section{p34-exercise}
+\begin{tcolorbox}
+A curve in Euclidean 3-space has the equations $$ x^1 =  a \cos(u), x^2 = a\sin(u), x^3 = bu$$ where $x^1, x^2,x^3$ are rectangular Cartesian coordinates,$u$ is a parameter, and $a, b$ are positive constants. Find the length of this curve between the point $u = 0$ and $u = 2\pi$.
+\end{tcolorbox}
+The metric tensor has the following form,
+\begin{align}
+\ (a_{ij}) &= \begin{pmatrix}1 & 0 &0 \\ 0 &1 &0\\0 & 0 &1  \\ \end{pmatrix} \\
+\text {and  (2.306)  }\quad s &= \int^{2\pi}_0[\epsilon a_{mn}p^mp^n]^{\frac{1}{2}}du
+\end{align}
+with
+\begin{align}
+\ p^1 = \dv{x^1}{u} = -a\sin(u), \quad p^2 = \dv{x^2}{u} = a\cos(u), \quad p^3 = \dv{x^3}{u} = b
+\end{align}
+Hence (2) becomes
+\begin{align}
+s &= \int^{2\pi}_0\epsilon[a^2 \sin^2(u) + a^2\cos^2(u) + b^2]^{\frac{1}{2}}du\\
+\ &= \int^{2\pi}_0\epsilon[a^2+  b^2]^{\frac{1}{2}}du\\
+\ &= [a^2+  b^2]^{\frac{1}{2}} \left. u\right|^{2\pi}_0\\
+\ &= 2\pi[a^2+  b^2]^{\frac{1}{2}} 
+\end{align}
+$$\medblackdiamond$$
+\newpage
+
+\section{p36-clarification 2.314}
+\begin{tcolorbox}
+Going from 2.313 to 2.314 yields because both $X^m$ and $Y^m$ are unit vectors and by definition of the magnitude (see 2.301) both  $a_{mn}X^mX^n$ and $a_{mn}Y^mY^n$ are 1 (also due to the fact that only a positive definite metric tensor is considered, $\epsilon = 1$).
+\end{tcolorbox}
 $$\medblackdiamond$$
 \newpage
 
@@ -359,15 +405,8 @@ As $\theta$ is infinitesimal, we can state
 $$\medblackdiamond$$
 \newpage
 
-\section{p36-clarification 2.314}
 
-\begin{tcolorbox}
-Going from 2.313 to 2.314 yields because both $X^m$ and $Y^m$ are unit vectors and by definition of the magnitude (see 2.301) both  $a_{mn}X^mX^n$ and $a_{mn}Y^mY^n$ are 1 (also due to the fact that only a positive definite metric tensor is considered, $\epsilon = 1$).
-\end{tcolorbox}
-$$\medblackdiamond$$
-\newpage
-
-\section{p37-clarification 2.409}
+\section{p39-clarification 2.409}
 
 \begin{tcolorbox}
 We clarify the integration by parts in the derivation of the general  geodesic equation.
@@ -392,5 +431,26 @@ $$A= \pdv{(\epsilon w)^{\frac{1}{2}}}{p^r} \quad \text{and } B = \pdv{x^r}{v}$$
 \ &= \pdv{(\epsilon w)^{\frac{1}{2}}}{p^r}\left.\pdv{x^r}{v}\right|_{u_0}^{u_1} - \int \pdv{x^r}{v}\pdv{\pdv{(\epsilon w)^{\frac{1}{2}}}{p^r} )}{u}du
 \end{align}
 Replacing (9) in (5) gives the formulea 2.409.
+$$\medblackdiamond$$
+\newpage
+
+\section{p41-exercise}
+\begin{tcolorbox}
+Prove the following identities: $$ [mn,r] = [nm,r], [rm,n]+[rn,m] = \partial_r a_{mn}$$
+\end{tcolorbox}
+$$\medblackdiamond$$
+\newpage
+
+\section{p42-exercise}
+\begin{tcolorbox}
+Prove that  $$ [mn,r] = a_{rs}\Gamma^s_{mn}$$
+\end{tcolorbox}
+$$\medblackdiamond$$
+\newpage
+
+\section{p42-clarification on 2.430}
+\begin{tcolorbox}
+... This may proved without difficulty by starting with 2.427, in which $\lambda$ is a known function of $u$ , and defining $s$ by the relation$$ s = \int^u_{u_0}(exp\int^v_{v_0} \lambda(w)dw)dv$$ $u_0, v_0$ being constants....
+\end{tcolorbox}
 $$\medblackdiamond$$
 \newpage
